<resources>
    <string name="app_name">Gojo</string>
    <string name="facebook_app_id">318338549828273</string>
    <string name="fb_login_protocol_scheme">fb630907857886564</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ignore">Ignore</string>
    <string name="numero_de_telephone">Numero de telephone</string>
    <string name="suivant">Suivant</string>
    <string name="ou">OU</string>
    <string name="continuer_avec_email">Continuer avec Email</string>
    <string name="en_continuant_vous_acceptez_nos">En continuant, vous acceptez nos </string>
    <string name="conditions_d_utilisation">Conditions d’utilisation </string>
    <string name="et_notre">et notre</string>
    <string name="ressayez">Réessayez</string>
    <string name="verifier_connextion">S\'il vous plait, vérifiez votre connexion internet</string>
    <string name="email_or_password_incorrect">Vous avez entré une adresse e-mail ou un mot de passe incorrect</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="v_rification_du_code">Vérification du code</string>
    <string name="resend_again">\u0020Resend again</string>
    <string name="didn_t_receive_the_verification">Didn’t receive the verification ?</string>
    <string name="_212">+212</string>
    <string name="menus">Menus</string>
    <string name="espace_sushi">Espace Sushi</string>
    <string name="asiatique_lorem_ipsum_dolor_amet_consectetuer_adipiscing_elit_sed_diam_nonummy_sit_et_un_accompagnement_au_choix">Asiatique . Lorem ipsum dolor amet, consectetuer adipiscing elit, sed diam nonummy sit et un accompagnement au choix.</string>
    <string name="compte">Compte</string>
    <string name="commander">Commander</string>
    <string name="mon_profile">Mon profile</string>
    <string name="mes_commandes">Mes Commandes</string>
    <string name="r_clamation">Réclamation</string>
    <string name="contact">Contact</string>
    <string name="langues">Langues</string>
    <string name="afficher_plus">Afficher plus</string>
    <string name="adresse_de_livraison">ADRESSE DE LIVRAISON</string>
    <string name="lorem_ipsum_dolor_amet_consectetuer_adipiscing_elit">Lorem ipsum dolor amet, consectetuer adipiscing elit.</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="votre_num_ro_de_t_l_phone">Votre numéro de téléphone</string>
    <string name="total">Total</string>
    <string name="livraison">Livraison</string>
    <string name="article">Article</string>
    <string name="livraison_sans_contact">Livraison sans contact : dans la mesure du possible, les coursiers déposeront la commande sur le pas de votre porte. Veuillez choisir le paiement par la carte bancaire pour cette option</string>
    <string name="confirmer_la_commande">Confirmer la commande</string>
    <string name="fran_ais">Français</string>
    <string name="arabe">العربية</string>
    <string name="english">English</string>
    <string name="lang">Langues</string>
    <string name="choisissez_votre_langue">Choisissez votre langue</string>
    <string name="on_vous_r_pondrons">On vous répondrons rapidement à toutes les questions que vous pourriez avoir sur nos services</string>
    <string name="envoyer_un_email">Envoyer un email</string>
    <string name="my_profile">Mon Profile</string>
    <string name="change_password">"Modifier mon mot de passe "</string>
    <string name="pour_changer_votre_mot_de_passe">Pour changer votre mot de passe, complétez les informations ci-dessous.</string>
    <string name="enregister">Enregister</string>
    <string name="reclamation">Réclamation</string>
    <string name="mode_de_paiment">Mode de paiment</string>
    <string name="annuler">Annuler</string>
    <string name="saisissez_le_num_ro_de_votre_commande">Saisissez le numéro de votre commande :</string>
    <string name="num_ro_de_commande">Numéro de commande</string>
    <string name="s_lectionnez_l_object">Sélectionnez l\'object</string>
    <string name="ajouter_un_fichier">Ajouter un fichier :</string>
    <string name="envoyer">Envoyer</string>
    <string name="choisissez_cette_adresse">choisissez cette adresse</string>
    <string name="wrong_item">élément erroné</string>
    <string name="broken_item">article cassé</string>
    <string name="insert_commande_number">Entrez numéro de commande</string>
    <string name="unknown_error">Error occurred</string>
    <string name="select_image">Séléctionner une image</string>
    <string name="field_required">champ obligatoire</string>
    <string name="claim_success">réclamation envoyée avec succès</string>
    <string name="phone_required">Numéro de téléphone requis</string>
    <string name="went_wrong">Une erreur s\'est produite. Veuillez réessayer</string>
    <string name="otp_verification">You have entered invalid code.</string>
    <string name="please_type_code">Please type the verification code sent</string>
    <string name="too">to</string>
    <string name="votre_num_ro_de_telephone">Votre numéro de telephone</string>
    <string name="empty_field_not_allowed">Les champs vides ne sont pas autorisés</string>
    <string name="invalid_email">Email invalide</string>
    <string name="invalid_phone">Numéro de téléphone invalide</string>
    <string name="profile_updated">Mise à jour du profil réussie</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pin_code">Code Pin</string>
    <string name="phone_number">Numéro de Téléphone</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="connecter">Connecter</string>
    <string name="mot_de_passe_actuel">Votre mot de passe actuel</string>
    <string name="saisissez_new_password">"Saisissez votre nouveau mot de passe "</string>
    <string name="resaisissez_new_password">Ressaisissez votre nouveau mot de passe</string>
    <string name="password_do_not_match">Les mots de passe ne correspondent pas</string>
    <string name="password_updated_succefully">Mot de passe mis à jour avec succès</string>
    <string name="appeler">Appeler</string>
    <string name="no_email_client">Aucun application messagerie n\'est installé</string>
    <string name="send_email">Envoyer email...</string>
    <string name="pour">pour</string>
    <string name="pick_city">Choisir une ville</string>
    <string name="no_city_selected">No city selected</string>
    <string name="ville_de_livraison">VILLE DE LIVRAISON</string>
    <string name="modifier_le_mot_de_passe">Modifier le mot de passe</string>
    <string name="d_utilisation_et_notre">d’utilisation et notre &#x20;</string>
    <string name="aucune_m_thode_de_paiement_s_lectionn_e">Aucune méthode de paiement sélectionnée</string>
    <string name="aucune_addresse_selectionn_e">Aucune addresse selectionnée</string>
    <string name="payment_by_card">Paiement par carte</string>
    <string name="cash_on_delivery">Paiement à la livraison</string>
    <string name="plase_select_city">Aucune ville sélectionnée</string>
    <string name="please_select_address">Aucune adresse sélectionnée</string>
    <string name="please_select_payment_method">Aucun mode de paiement sélectionné</string>
    <string name="please_type_phone_number">Veuillez saisir votre numéro de téléphone</string>
    <string name="commande_send_succefully">Commande envoyée avec succès</string>
    <string name="en_continuant_vous_acceptez_nos_conditions_d_utilisation_et_notre_politique_de_confidentialit">En continuant, vous acceptez nos Conditions
        d’utilisation et notre Politique de confidentialité</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="votre_prenom">Votre prénom</string>
    <string name="votre_nom">Votre nom</string>
    <string name="votre_email">Votre email</string>
</resources>