<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LanguageFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textColor="@color/custom_black"
        android:text="@string/choisissez_votre_langue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/frenchBtn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/lang_rounded_button"
            android:text="@string/fran_ais"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/arabicBtn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/lang_rounded_button"
            android:text="@string/arabe"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/englishBtn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/lang_rounded_button"
            android:text="@string/english"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>