<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/headerText"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/pour_changer_votre_mot_de_passe"
                android:textSize="13sp" />


            <com.majjane.chefmajjane.views.customviews.CustomTextField
                android:id="@+id/enterPassword"
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headerText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                app:hint="Mot de passe"
                app:inputType="textPassword"
                app:textTitle="@string/mot_de_passe_actuel" />

            <com.majjane.chefmajjane.views.customviews.CustomTextField
                android:id="@+id/newPassword"
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enterPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                app:hint="@string/saisissez_new_password"
                app:inputType="textPassword"
                app:textTitle="@string/saisissez_new_password" />

            <com.majjane.chefmajjane.views.customviews.CustomTextField
                android:id="@+id/reTypeNewPassword"
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                app:hint="Nouveau mot de passe"
                app:inputType="textPassword"
                app:textTitle="@string/resaisissez_new_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_below="@id/reTypeNewPassword"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:background="@drawable/green_rounded_button"
                android:text="@string/enregister"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/saveButton"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:background="@drawable/black_rounded_edittext"
                android:text="@string/annuler"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progressBar7"
                style="?android:attr/progressBarStyle"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>