<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.auth.SignUpFragment">
        <View
            android:id="@+id/curved_header"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/curved_custom_view" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/sign_up_ic"/>
        <ImageButton
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:src="@drawable/back_image_button" />

        <com.majjane.chefmajjane.views.customviews.CustomTextField
            android:id="@+id/prenom"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/curved_header"
            app:inputType="text"
            app:textTitle="@string/prenom" />

        <com.majjane.chefmajjane.views.customviews.CustomTextField
            android:id="@+id/nom"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prenom"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:inputType="text"
            app:textTitle="@string/nom" />

        <com.majjane.chefmajjane.views.customviews.CustomTextField
            android:id="@+id/email"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nom"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:inputType="textEmailAddress"
            app:textTitle="@string/email" />

        <com.majjane.chefmajjane.views.customviews.CustomTextField
            android:id="@+id/password"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            app:drawableRight="@drawable/password_ic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:inputType="textPassword"
            app:textTitle="@string/pin_code" />

        <com.majjane.chefmajjane.views.customviews.CustomTextField
            android:id="@+id/phoneNumber"
            android:layout_width="366dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:inputType="phone"
            app:textTitle="@string/phone_number" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:background="@drawable/green_rounded_button"
            android:src="@drawable/ic_baseline_arrow_forward_24" />

        <ProgressBar
            android:id="@+id/progressBar8"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</ScrollView>