<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_green"
    tools:context=".views.LoginFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIgnore"
        android:layout_width="77dp"
        android:layout_height="37dp"
        android:layout_marginStart="294dp"
        android:layout_marginLeft="294dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/rounded_button"
        android:text="@string/ignore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chef_logo"
        app:layout_constraintEnd_toEndOf="@+id/btnIgnore"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-102dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/numero_de_telephone"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_rounded_edittext"
        android:text="@string/suivant"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton2"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton2">

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ou"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>