<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ContactFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/on_vous_r_pondrons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:id="@+id/envoyerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginEnd="21dp"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/envoyer_un_email"
                android:textColor="@color/custom_black"
                android:textSize="21sp" />

        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="#DBDBE0" />

        <LinearLayout
            android:id="@+id/appeler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginEnd="21dp"
                android:src="@drawable/telephon_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/appeler"
                android:textColor="@color/custom_black"
                android:textSize="21sp" />
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="#DBDBE0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>